--- a/form.ui
+++ b/form.ui
@@ -803,7 +803,7 @@
                    <string/>
                   </property>
                   <property name="pixmap">
-                   <pixmap>icons/arrow-left (1).svg</pixmap>
+                   <pixmap>icons/arrow_left_off.svg</pixmap>
                   </property>
                   <property name="scaledContents">
                    <bool>false</bool>
@@ -852,7 +852,7 @@
                    <string/>
                   </property>
                   <property name="pixmap">
-                   <pixmap>icons/arrow-right (7).svg</pixmap>
+                   <pixmap>icons/arrow_right_off.svg</pixmap>
                   </property>
                  </widget>
                 </item>
