--- a/form.ui
+++ b/form.ui
@@ -119,11 +119,11 @@
             </property>
            </widget>
           </item>
-          <item>
+          <item alignment="Qt::AlignmentFlag::AlignLeft">
            <widget class="QLabel" name="satellities_label">
             <property name="minimumSize">
              <size>
-              <width>20</width>
+              <width>30</width>
               <height>0</height>
              </size>
             </property>
@@ -165,11 +165,11 @@
             </property>
            </widget>
           </item>
-          <item>
+          <item alignment="Qt::AlignmentFlag::AlignLeft">
            <widget class="QLabel" name="fix_quality_label">
             <property name="minimumSize">
              <size>
-              <width>20</width>
+              <width>15</width>
               <height>0</height>
              </size>
             </property>
@@ -180,6 +180,9 @@
             </property>
             <property name="text">
              <string>--</string>
+            </property>
+            <property name="margin">
+             <number>0</number>
             </property>
            </widget>
           </item>
@@ -300,7 +303,7 @@
              <string/>
             </property>
             <property name="pixmap">
-             <pixmap>icons/app_bt_off.png</pixmap>
+             <pixmap>icons/app_bt_off.svg</pixmap>
             </property>
             <property name="alignment">
              <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
